--- a/backend/src/main/docker/docker-compose.yml
+++ b/backend/src/main/docker/docker-compose.yml
@@ -3,11 +3,11 @@ version: '3.1'
 services:
   db:
     image: 'postgres:15.2'
-    container_name: backend-postgres
-    restart: unless-stopped
+    container_name: postgres
+    restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: root
-      POSTGRES_DB: backend
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ecommerce
     ports:
       - "5432:5432"
