--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.6.0",
     "expo": "~49.0.13",
     "expo-font": "^11.6.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
   },
