--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -83,11 +83,15 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>5.2.3</version> <!-- Chỉnh phiên bản mới nhất -->
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-elasticsearch</artifactId>
         </dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>org.elasticsearch</groupId>-->
+<!--			<artifactId>elasticsearch</artifactId>-->
+<!--			<version>8.6.2</version>-->
+<!--		</dependency>-->
 
     </dependencies>
     <dependencyManagement>
