--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -92,6 +92,11 @@
 <!--			<artifactId>elasticsearch</artifactId>-->
 <!--			<version>8.6.2</version>-->
 <!--		</dependency>-->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.3.1.Final</version>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
