--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -40,14 +40,15 @@ spring:
           lob:
             non_contextual_creation: true
         default_schema: ecommerce
-        ddl-auto: validate
+        ddl-auto: none
         show_sql: true
         format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
     generate-ddl: true
   flyway:
     enabled: true
     baseline-on-migrate: true
-    schemas: ["product"]
+    schemas: ["ecommerce"]
     locations: classpath:/db/migration
 
   docker:
@@ -64,8 +65,6 @@ spring:
   jackson:
     serialization:
       fail-on-empty-beans: false
-
-
 
   main:
     allow-bean-definition-overriding: true
