--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -98,6 +98,12 @@
             <version>6.3.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
