--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.8",
@@ -19,13 +21,17 @@
     "axios": "^1.6.0",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
+    "local-storage": "^2.0.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0"
+    "react-native-secure-storage": "^0.1.2",
+    "rn-secure-storage": "^2.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
