--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -136,7 +136,17 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.algolia</groupId>
+            <artifactId>algoliasearch-core</artifactId>
+            <version>3.16.5</version>
+          </dependency>
+          <dependency>
+            <groupId>com.algolia</groupId>
+            <artifactId>algoliasearch-apache</artifactId>
+            <version>3.16.5</version>
+          </dependency>
+          
     </dependencies>
     <dependencyManagement>
         <dependencies>
