--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,14 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@rneui/themed": "^4.0.0-rc.8",
+    "algoliasearch": "^4.20.0",
+    "algoliasearch-helper": "^3.15.0",
     "axios": "^1.6.0",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "local-storage": "^2.0.0",
     "react": "18.2.0",
+    "react-instantsearch-core": "^7.3.0",
     "react-native": "0.72.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.12.0",
